2001-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/ColorUtils.c (GetShadowColor):
	(GetHiliteColor):
	finished reverting back to 2.3.22 colour calculations

	* fvwm/menus.c (MenuInteraction):
	fixed busy wait with PopupDelay menu style

2001-03-02  Dan Espen  <dane@mk.telcordia.com>

	* AUTHORS: Added some nice background information for Chuck Hines.

2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS, configure.in:
	changed version to 2.3.30

2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/builtins.c (do_recapture):
	* fvwm/stack.h:
	* fvwm/externs.h:
	* fvwm/stack.c (verify_stack_ring_consistency):
	(dump_stack_ring):
	(verify_stack_ring_consistency):
	* fvwm/fvwm.c (main):
	disabled stack ring debugging by default
	to enable use the -debug_stack_ring option
	verify stack ring consistency after a recapture

	* fvwm/borders.c (draw_clipped_decorations):
	(get_common_decorations):
	further performance enhancement

	* fvwm/borders.c (draw_clipped_decorations):
	removed duplicate get_common_decorations call

	* fvwm/borders.c (draw_clipped_decorations):
	* fvwm/window_flags.h (SET_WINDOW_BORDER_DRAWN):
	* fvwm/fvwm.h:
	force resetting the window border background on initial border drawing

	* libs/ColorUtils.c (GetHiliteColor):
	(GetShadowColor):
	fixed parameters to GetShadowOrHiliteColor calls screwing up colour
	calculations

	* fvwm/events.c (HandleMapRequestKeepRaised):
	icon position hint was sometimes used although it was not set
	(fake_map_unmap_notify):
	(HandleMapRequestKeepRaised):
	simply fake a MapNotify if a MapRequest for an already mapped window
	arrives
	fake an UnmapNotify when a window starts iconic

2001-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (ProcessNewStyle):
	fixed reversers window group options

2001-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/style.h:
	* fvwm/window_flags.h (DO_ICONIFY_WINDOW_GROUPS):
	* fvwm/fvwm.h (struct):